--- a/index.html
+++ b/index.html
@@ -131,21 +131,67 @@
         <div class="section-title about-title">
           <h2>about</h2>
           <div class="underline"></div>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti quaerat fuga, voluptatum quasi est
-            dolore labore totam laboriosam officiis natus aut expedita temporibus sed facilis, corrupti necessitatibus
-            id distinctio? Labore possimus qui nemo consequuntur, dolor velit eaque provident commodi! Libero.</p>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti quaerat fuga, voluptatum quasi est
-            dolore labore totam laboriosam officiis natus aut expedita temporibus sed facilis, corrupti necessitatibus
-            id distinctio? Labore possimus qui nemo consequuntur, dolor velit eaque provident commodi! Libero.</p>
-          <a href="about.html" class="btn">about me</a>
         </div>
         <!-- end of section title -->
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti quaerat fuga, voluptatum quasi est
+          dolore labore totam laboriosam officiis natus aut expedita temporibus sed facilis, corrupti necessitatibus
+          id distinctio? Labore possimus qui nemo consequuntur, dolor velit eaque provident commodi! Libero.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti quaerat fuga, voluptatum quasi est
+          dolore labore totam laboriosam officiis natus aut expedita temporibus sed facilis, corrupti necessitatibus
+          id distinctio? Labore possimus qui nemo consequuntur, dolor velit eaque provident commodi! Libero.
+        </p>
+        <a href="about.html" class="btn">about me</a>
       </article>
     </div>
   </section>
   <!-- end of about -->
   <!-- services -->
-
+  <section class="section bg-grey">
+    <!-- section title -->
+    <div class="section-title">
+      <h2>services</h2>
+      <div class="underline"></div>
+    </div>
+    <div class="section-center services-center">
+      <!-- single service -->
+      <article class="service">
+        <i class="fas fa-code service-icon"></i>
+        <h4>web development</h4>
+        <div class="underline"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad veritatis dolore optio officiis amet, rerum
+          laboriosam voluptatibus maiores beatae tempora.
+        </p>
+      </article>
+      <!-- end of single service -->
+      <!-- single service -->
+      <article class="service">
+        <i class="fab fa-sketch service-icon"></i>
+        <h4>web design</h4>
+        <div class="underline"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad veritatis dolore optio officiis amet, rerum
+          laboriosam voluptatibus maiores beatae tempora.
+        </p>
+      </article>
+      <!-- end of single service -->
+      <!-- single service -->
+      <article class="service">
+        <i class="fab fa-android service-icon"></i>
+        <h4>app design</h4>
+        <div class="underline"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad veritatis dolore optio officiis amet, rerum
+          laboriosam voluptatibus maiores beatae tempora.
+        </p>
+      </article>
+      <!-- end of single service -->
+    </div>
+    <!-- end of section title -->
+  </section>
   <!-- end of services -->
   <!-- projects -->
 
