work->home, thuesday

--- a/index.html
+++ b/index.html
@@ -194,7 +194,65 @@
   </section>
   <!-- end of services -->
   <!-- projects -->
-
+  <section class="section projects">
+    <!-- section title -->
+    <div class="section-title projects-title">
+      <h2>latest works</h2>
+      <div class="underline"></div>
+      <p class="projects-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nihil at non, ratione voluptatibus tempora
+        nesciunt molestias rerum aliquam, aliquid aut iste libero ex. Enim aperiam at nihil laborum. Autem similique
+        optio impedit consequuntur excepturi voluptates deleniti eaque, inventore cum.
+      </p>
+    </div>
+    <!-- end of section title -->
+    <div class="section-center projects-center">
+      <!-- single project -->
+      <a href="project.html" class="project-1">
+        <article class="project">
+          <img class="project-img" src="./images/project-1.jpeg" alt="">
+          <div class="project-info">
+            <h4>project-title</h4>
+            <p>client name</p>
+          </div>
+        </article>
+      </a>
+      <!-- end of single project -->
+      <!-- single project -->
+      <a href="project.html" class="project-2">
+        <article class="project">
+          <img class="project-img" src="./images/project-2.jpeg" alt="">
+          <div class="project-info">
+            <h4>project-title</h4>
+            <p>client name</p>
+          </div>
+        </article>
+      </a>
+      <!-- end of single project -->
+      <!-- single project -->
+      <a href="project.html" class="project-3">
+        <article class="project">
+          <img class="project-img" src="./images/project-3.jpeg" alt="">
+          <div class="project-info">
+            <h4>project-title</h4>
+            <p>client name</p>
+          </div>
+        </article>
+      </a>
+      <!-- end of single project -->
+      <!-- single project -->
+      <a href="project.html" class="project-4">
+        <article class="project">
+          <img class="project-img" src="./images/project-4.jpeg" alt="">
+          <div class="project-info">
+            <h4>project-title</h4>
+            <p>client name</p>
+          </div>
+        </article>
+      </a>
+      <!-- end of single project -->
+    </div>
+  </section>
   <!-- end of projects -->
   <!-- connect -->
 
