--- a/index.html
+++ b/index.html
@@ -255,7 +255,12 @@
   </section>
   <!-- end of projects -->
   <!-- connect -->
-
+  <section class="connect">
+    <video controls autoplay loop class="video-container" poster="./images/project-1.jpeg">
+      <source src="./videos/connect.mp4" type="video/mp4">
+      Sorry, your browser does not support embedded videos
+    </video>
+  </section>
   <!-- end of connect -->
   <!-- skills -->
 
