--- a/index.html
+++ b/index.html
@@ -256,10 +256,23 @@
   <!-- end of projects -->
   <!-- connect -->
   <section class="connect">
-    <video controls autoplay loop class="video-container" poster="./images/project-1.jpeg">
+    <video autoplay muted loop class="video-container" poster="./images/project-1.jpeg">
       <source src="./videos/connect.mp4" type="video/mp4">
       Sorry, your browser does not support embedded videos
     </video>
+    <div class="video-banner">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>let's get in touch</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <p class="video-text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam magnam, mollitia eos dignissimos necessitatibus,
+        incidunt porro nisi quis sed quam voluptates ratione sint? Voluptatum, magnam ab, fugit temporibus quia
+        exercitationem molestiae sunt maiores hic facilis obcaecati saepe explicabo optio cum?
+      </p>
+    </div>
   </section>
   <!-- end of connect -->
   <!-- skills -->
