work->home, thursday

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
         incidunt porro nisi quis sed quam voluptates ratione sint? Voluptatum, magnam ab, fugit temporibus quia
         exercitationem molestiae sunt maiores hic facilis obcaecati saepe explicabo optio cum?
       </p>
+      <a href="contact.html" class="btn">contact me</a>
     </div>
   </section>
   <!-- end of connect -->
