--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       <h2>services</h2>
       <div class="underline"></div>
     </div>
+    <!-- end of section title -->
     <div class="section-center services-center">
       <!-- single service -->
       <article class="service">
@@ -433,10 +434,141 @@
   </section>
   <!--end of  timeline -->
   <!-- blog -->
-
+  <section class="section blog">
+    <!-- section title -->
+    <div class="section-title blog-title">
+      <h2>blog</h2>
+      <div class="underline"></div>
+    </div>
+    <!-- end of section title -->
+    <div class="section-center blog-center">
+      <!-- single blog -->
+      <article class="card">
+        <!-- front of the card -->
+        <div class="card-side card-front">
+          <img src="./images/project-1.jpeg" alt="">
+          <div class="card-info">
+            <h4>article title</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aliquid rerum minima accusantium.
+              Accusantium quibusdam error, inventore velit eius porro!
+            </p>
+            <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="author image">
+              <p>7 min read</p>
+            </div>
+          </div>
+        </div>
+        <!-- card back -->
+        <div class="card-side card-back">
+          <button class="btn">read more</button>
+        </div>
+      </article>
+      <!-- end of single blog -->
+      <!-- single blog -->
+      <article class="card">
+        <!-- front of the card -->
+        <div class="card-side card-front">
+          <img src="./images/project-2.jpeg" alt="">
+          <div class="card-info">
+            <h4>article title</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aliquid rerum minima accusantium.
+              Accusantium quibusdam error, inventore velit eius porro!
+            </p>
+            <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="author image">
+              <p>7 min read</p>
+            </div>
+          </div>
+        </div>
+        <!-- card back -->
+        <div class="card-side card-back">
+          <button class="btn">read more</button>
+        </div>
+      </article>
+      <!-- end of single blog -->
+      <!-- single blog -->
+      <article class="card">
+        <!-- front of the card -->
+        <div class="card-side card-front">
+          <img src="./images/project-3.jpeg" alt="">
+          <div class="card-info">
+            <h4>article title</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aliquid rerum minima accusantium.
+              Accusantium quibusdam error, inventore velit eius porro!
+            </p>
+            <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="author image">
+              <p>7 min read</p>
+            </div>
+          </div>
+        </div>
+        <!-- card back -->
+        <div class="card-side card-back">
+          <button class="btn">read more</button>
+        </div>
+      </article>
+      <!-- end of single blog -->
+      <!-- single blog -->
+      <article class="card">
+        <!-- front of the card -->
+        <div class="card-side card-front">
+          <img src="./images/project-4.jpeg" alt="">
+          <div class="card-info">
+            <h4>article title</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aliquid rerum minima accusantium.
+              Accusantium quibusdam error, inventore velit eius porro!
+            </p>
+            <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="author image">
+              <p>7 min read</p>
+            </div>
+          </div>
+        </div>
+        <!-- card back -->
+        <div class="card-side card-back">
+          <button class="btn">read more</button>
+        </div>
+      </article>
+      <!-- end of single blog -->
+    </div>
+  </section>
   <!--end of  blog -->
   <!-- footer -->
-
+  <footer class="footer">
+    <!-- social icons -->
+    <ul class="social-icons">
+      <li>
+        <a href="https:/www.facebook.com" class="social-icon">
+          <i class="fab fa-facebook"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https:/www.linkedin.com" class="social-icon">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https:/www.squarespace.com" class="social-icon">
+          <i class="fab fa-squarespace"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https:/www.fa-bahance.com" class="social-icon">
+          <i class="fab fa-behance"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https:/www.instagram.com" class="social-icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </li>
+    </ul>
+    <p>&copy; <span id="date"></span> john doe. all rights reserved</p>
+  </footer>
   <script src="./js/app.js"></script>
 </body>
 
